--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "^0.66.4",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-input-spinner": "^1.7.12",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
