--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-native": "^0.66.4",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-input-spinner": "^1.7.12",
     "react-native-paper": "^4.11.1",
