--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,7 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
 }
 
