--- a/ios/mcampweek2/Info.plist
+++ b/ios/mcampweek2/Info.plist
@@ -69,6 +69,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>GodoB.otf</string>
+		<string>GodoM.otf</string>
 	</array>
 </dict>
 </plist>
