connect server data(Post/Comment)

--- a/ios/mcampweek2/Info.plist
+++ b/ios/mcampweek2/Info.plist
@@ -71,6 +71,8 @@
 		<string>Zocial.ttf</string>
 		<string>GodoB.otf</string>
 		<string>GodoM.otf</string>
+		<string>Shilla_Culture(B).ttf</string>
+		<string>Shilla_Culture(M).ttf</string>
 	</array>
 </dict>
 </plist>
