--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'mcampweek2' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'mcampweek2Tests' do
     inherit! :complete
     # Pods for testing
