--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-seoul/kakao-login": "3.0.3",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -22,13 +23,16 @@
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-native": "^0.66.4",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-input-spinner": "^1.7.12",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.16.0"
